<resources>
    <string name="app_name" translatable="false">lib</string>

    <string name="button1_large_text">1</string>
    <string name="button2_large_text">2</string>
    <string name="button2_small_text">ABC</string>
    <string name="button3_large_text">3</string>
    <string name="button3_small_text">DEF</string>
    <string name="button4_large_text">4</string>
    <string name="button4_small_text">GHI</string>
    <string name="button5_large_text">5</string>
    <string name="button5_small_text">JKL</string>
    <string name="button6_large_text">6</string>
    <string name="button6_small_text">MNO</string>
    <string name="button7_large_text">7</string>
    <string name="button7_small_text">PQRS</string>
    <string name="button8_large_text">8</string>
    <string name="button8_small_text">TUV</string>
    <string name="button9_large_text">9</string>
    <string name="button9_small_text">WXYZ</string>
    <string name="button11_large_text">0</string>

    <string name="pin_code_step_disable">Disable PIN</string>
    <string name="pin_code_step_create">Enter a new PIN</string>
    <string name="pin_code_step_change">Enter PIN</string>
    <string name="pin_code_step_unlock">Enter PIN</string>
    <string name="pin_code_step_enable_confirm">Confirm PIN</string>

    <string name="pin_code_forgot_text">Forgot PIN?</string>

    <string name="pin_code_fingerprint_text">Fingerprint</string>
    <string name="pin_code_fingerprint_success">Fingerprint recognized</string>
    <string name="pin_code_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="enter_pin">Enter PIN</string>

</resources>