<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/pin_code_first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_1"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginEnd="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button1_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_2"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginLeft="@dimen/keyboard_button_row_bottom"
            android:layout_marginRight="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button2_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_3"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginStart="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button3_large_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyboard_button_row_bottom"
        android:gravity="center">

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_4"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginEnd="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button4_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_5"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginLeft="@dimen/keyboard_button_row_bottom"
            android:layout_marginRight="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button5_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_6"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginStart="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button6_large_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/keyboard_button_row_bottom"
        android:gravity="center">

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_7"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginEnd="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button7_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_8"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginLeft="@dimen/keyboard_button_row_bottom"
            android:layout_marginRight="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button8_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_9"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginStart="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button9_large_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pin_code_fourth_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/keyboard_button_row_bottom">

            <ImageView
                android:id="@+id/pin_code_fingerprint_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="center" />
        </FrameLayout>

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_0"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginLeft="@dimen/keyboard_button_row_bottom"
            android:layout_marginRight="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_text="@string/button11_large_text" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardButtonView
            android:id="@+id/pin_code_button_clear"
            android:layout_width="@dimen/keyboard_button_diameter"
            android:layout_height="@dimen/keyboard_button_diameter"
            android:layout_marginStart="@dimen/keyboard_button_row_bottom"
            app:lp_keyboard_button_image="@drawable/ic_backspace_white_24dp" />

    </LinearLayout>

</LinearLayout>