<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/patch_orange">

        <FrameLayout
            android:id="@+id/pinsRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/image_background"
            android:background="@drawable/patch_dark_orange" />

        <ImageView
            android:id="@+id/image_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/pin_code_keyboard_view"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/background_image_margin_bottom"
            android:adjustViewBounds="true"
            android:src="@drawable/pin_orange_background" />

        <TextView
            android:id="@+id/pin_code_step_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/image_background"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/enterpin_margin_bottom"
            android:text="@string/enter_pin"
            android:textColor="#ffffff"
            android:textSize="@dimen/pin_code_step_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_background"
            android:layout_gravity="top">

            <com.github.omadahealth.lollipin.lib.views.PinCodeRoundView
                android:id="@+id/pin_code_round_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/pin_code_fingerprint_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pin_code_round_view"
                android:layout_centerHorizontal="true"
                android:maxLines="1"
                android:textColor="#ffffff"
                android:textSize="@dimen/pin_code_forgot_text_size"
                android:visibility="visible"
                tools:text="@string/pin_code_fingerprint_text" />

            <LinearLayout
                android:id="@+id/pin_code_gray_bar"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/pin_code_fingerprint_textview"
                android:layout_marginBottom="@dimen/light_gray_bar_margin_bottom"
                android:layout_marginLeft="@dimen/light_gray_bar_margin_sides"
                android:layout_marginRight="@dimen/light_gray_bar_margin_sides"
                android:layout_marginTop="@dimen/light_gray_bar_margin_top"
                android:background="@null"
                android:orientation="horizontal"
                android:visibility="gone" />
        </RelativeLayout>

        <View
            android:id="@+id/fakeView"
            android:layout_width="10dp"
            android:layout_height="160dp"
            android:layout_centerInParent="true"
            android:background="@null" />

        <com.github.omadahealth.lollipin.lib.views.KeyboardView
            android:id="@+id/pin_code_keyboard_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/fakeView" />

        <FrameLayout
            android:id="@+id/disable_pin_entry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/trans_gray"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone" />

        <Button
            android:id="@+id/pin_code_forgot_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pin_code_keyboard_view"
            android:layout_centerHorizontal="true"
            android:layout_margin="2dp"
            android:background="?attr/selectableItemBackground"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="#ffffff"
            tools:text="@string/pin_code_forgot_text" />

        <ImageView
            android:id="@+id/pin_code_logo_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/pinsRelativeLayout"
            android:layout_margin="-110dp"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>